PROJECT(Simple-DB)
add_subdirectory(util)
add_subdirectory(net)

AUX_SOURCE_DIRECTORY(util DIR_UTIL)
ADD_LIBRARY(util STATIC ${DIR_UTIL})
TARGET_LINK_LIBRARIES(util)

AUX_SOURCE_DIRECTORY(common DIR_COMMON)
ADD_LIBRARY(common STATIC ${DIR_COMMON})
TARGET_LINK_LIBRARIES(common)

AUX_SOURCE_DIRECTORY(net DIR_NET)
AUX_SOURCE_DIRECTORY(net/poller DIR_POLLER)
ADD_LIBRARY(net STATIC ${DIR_NET} ${DIR_POLLER})
TARGET_LINK_LIBRARIES(net)

