# ADD_EXECUTABLE(net_test net_test.cc)
# TARGET_LINK_LIBRARIES(net_test util gtest)
# add_test(
#     NAME
#     net_test
#     COMMAND
#     ${EXECUTABLE_OUTPUT_PATH}/net_test
# )

# ADD_EXECUTABLE(ListenHandlerTest listen_handler_test.cc)
# TARGET_LINK_LIBRARIES(ListenHandlerTest net gtest)
# add_test(
#     NAME
#     ListenHandlerTest
#     COMMAND
#     ${EXECUTABLE_OUTPUT_PATH}/ListenHandlerTest
# )

# ADD_EXECUTABLE(EventLoopTest event_loop_test.cc)
# TARGET_LINK_LIBRARIES(EventLoopTest net gtest)
# add_test(
#     NAME
#     EventLoopTest
#     COMMAND
#     ${EXECUTABLE_OUTPUT_PATH}/EventLoopTest
# )


# ADD_EXECUTABLE(TcpServerTest tcp_server_test.cc)
# TARGET_LINK_LIBRARIES(TcpServerTest net gtest)
# add_test(
#     NAME
#     TcpServerTest
#     COMMAND
#     ${EXECUTABLE_OUTPUT_PATH}/TcpServerTest
# )
